2009-01-25  Tim Retout  <diocles@gnu.org>

	* main.c (main): Respect $HOME when searching for ~/.enscriptrc

2008-01-01  Tim Retout  <diocles@gnu.org>

	* ChangeLog: Run M-x change-log-redate. Add copyright notice at end.

	* main.c (usage): Use PACKAGE_BUGREPORT instead of hardcoding the bug
	report address.

	* main.c (main) <toc>: Remove an unnecessary fclose of the toc
	temporary file, which was breaking the --toc option.

1999-09-17  Markku Rossi  <mtr@amme.ssh.fi>

	* main.c (handle_options): New option --footer to set the page
	footer string.
	(main): Modified the config file reading to be more user-tolerant.
	If the config file reading still fails, the enscript prints a
	verbose error message describing the situation.  Enscript also
	suggest some workarounds for the problem.  Hopefully this helps
	users to overcome their problems concerning the installation of
	the program.

	* psgen.c (dump_ps_page_header): Added support for user supplied
	footer strings.

	* main.c: Removed the obsolete --list-options option.

1999-09-13  Markku Rossi  <mtr@amme.ssh.fi>

	* main.c (handle_options): New option --extended-return-values to
	enable the extended return values.

1999-09-07  Markku Rossi  <mtr@amme.ssh.fi>

	* psgen.c (process_file): Added an argument `is_toc' to specify
	whether the file to process is a table of contents file.

1999-08-26  Markku Rossi  <mtr@amme.ssh.fi>

	* util.c (format_user_string): New escape `$p' for number of pages
	processed so far.

1999-07-16  Markku Rossi  <mtr@amme.ssh.fi>

	* Finished the static to dynamic memory buffer conversion.  Now
	the enscript sources should not have any buffer overrun bugs.

1999-07-13  Markku Rossi  <mtr@amme.ssh.fi>

	* Converted many static buffers to dynamically allocated buffers.
	There are still more work in this area.

1999-07-09  Markku Rossi  <mtr@amme.ssh.fi>

	* main.c: Started to fix some possible buffer overflows.  This
	needs still more work.

	* util.c: Implemented buffer_clear().
