@@ -1,3 +1,10 @@
+2009-03-28  Tim Retout  <diocles@gnu.org>
+
+	* psgen.c (recognize_eps_file): Remove ability to read EPS data
+	from a pipe, as this executes arbitrary commands.  It has been
+	disabled in most distros for five years anyway.  See
+	CAN-2004-1185.
+
 2009-01-25  Tim Retout  <diocles@gnu.org>
 
 	* main.c (main): Respect $HOME when searching for ~/.enscriptrc
